refactor: 미사용 학습 기능 정리 및 채팅 기능 기반 구축
- 미사용 페이지 삭제: dashboard, progress, quick-response
- 미사용 features 삭제: quick-response, think-aloud, rephrasing, daily-reflection
- 미사용 widgets 삭제: dashboard, progress
- 채팅 기능 추가: useScenarioChat, chat-api, websocket-client
- CLAUDE.md 정리 (272줄 → 117줄)
- Serena 메모리 및 Figma 디자인 URL 문서 추가
- .mcp.json을 .gitignore에 추가

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -48,7 +48,8 @@ coverage/
 
 # env
 .env.local
+.mcp.json
 
 # Node.js (root level - frontend has its own)
 node_modules/
-yarn.lock
+yarn.lock.mcp.json
