--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,7 @@
 # Environment Variables Template
 # Copy this file to .env.local and fill in your values
 # cp .env.example .env.local
+NODE_ENV=development
 
 # Figma API Token
 # Get from: Figma Settings > Account > Personal access tokens
@@ -9,10 +10,6 @@ FIGMA_API_KEY=
 # OpenAI API Key
 # Get from: https://platform.openai.com/api-keys
 OPEN_AI_API=
-
-# 로컬호스트 URL
-# 개발 환경에서 사용
-NEXT_PUBLIC_LOCALHOST_URL=http://localhost:8000
 
 # Backend API URL (기본 경로: /api/v1 자동 포함)
 # 예: http://localhost:8000 => API 호출 시 http://localhost:8000/api/v1/... 사용
