--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn dev:build && next dev --webpack",
+    "dev": "next dev",
     "dev:watch": "nodemon",
     "build": "next build",
     "start": "next start",
